[package]
name = "wbs-backup-daemon"
version = "0.1.11"
authors = [ "James Pharaoh <james@wellbehavedsoftware.com>" ]
description = "Simple daemon process to execute backup scripts"
homepage = "https://github.com/wellbehavedsoftware/wbs-backup"
license = "MIT"

[[bin]]
name = "backup-daemon"

[dependencies]
rustc-serialize = "0.3.14"
time = "0.1"
