[package]
name = "wbs-backup-daemon"
version = "1.1.15"
authors = [ "James Pharaoh <james@wellbehavedsoftware.com>" ]
description = "Simple daemon process to execute backup scripts"
homepage = "https://github.com/wellbehavedsoftware/wbs-backup"
license = "MIT"

include = [
	"Cargo.toml",
	"LICESE",
	"README.md",
	"scripts/**/*",
	"src/**/*"
]

[[bin]]
name = "backup-daemon"

[dependencies]
rustc-serialize = "*"
time = "*"
